fix dark mode

--- a/_sass/media.scss
+++ b/_sass/media.scss
@@ -11,23 +11,25 @@
 }
 
 @media only screen and (prefers-color-scheme: dark) {
-	:root, html {
-		background-color: black;
-		color: white;
-	}
 	.invert {
 		background-color: #222;
 		color: inherit;
 	}
 
 	nav .item.active {
-		color: inherit !important;
-		background-color: black !important;
+		color: inherit;
+		background-color: canvas;
 		text-decoration: underline;
 		font-weight: bold;
 	}
-	a { color: #9aa9f9; }
-	a:visited { color: #bb87f2; }
+
+	:root {
+		--code-comment: #808b9bd9;
+		--code-keyword: #d25a76;
+		--code-string: #e4a87e;
+		--code-number: #fa7d57;
+		--code-operator: #da9eff;
+	}
 }
 
 @media print {
